<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_render">XYZ RENDER</string>
    <string name="my_own_app">CAPSTONE: MY OWN APP</string>
    <string name="action_settings">Settings</string>
    <string name="toast_messages">This button will launch my %1$s app!.</string>
</resources>
